--- a/src/styles/css/main.css
+++ b/src/styles/css/main.css
@@ -3,12 +3,14 @@ Config
 **********************/
 /* Fonts */
 @import url("https://fonts.googleapis.com/css2?family=Waterfall&display=swap");
+/* Every section's content */
 .navbar-content, .about-content, .skills-content, .projects-content, .education-content, .contact-content {
   width: 92%;
   max-width: 35rem;
   margin: 0 auto;
 }
 
+/* Projects & Education Header Title (Icon + h2) */
 .projects-content header, .education-content header {
   width: 80%;
   display: flex;
@@ -34,6 +36,7 @@ Config
   font-size: 2rem;
 }
 
+/* About-page Resume Btn */
 .about-content article .socials #hero-resume-btn {
   display: flex;
   background-color: #fff;
@@ -56,6 +59,7 @@ Config
   font-size: 0.9rem;
 }
 
+/* About-page & Footer socials */
 .about-content article .socials #colored-socials, .contact .socials #colored-socials {
   display: flex;
   width: 12rem;
@@ -73,6 +77,7 @@ Config
   margin-bottom: 1.2rem;
   box-shadow: 0 3px 5px rgba(0, 0, 0, 0.3);
   cursor: pointer;
+  /* Footer ONLY */
 }
 
 .about-content article .socials #colored-socials a svg, .contact .socials #colored-socials a svg {
@@ -95,6 +100,7 @@ Config
   background-color: #a84ea8;
 }
 
+/* 992px + | navbar socials  */
 .navbar .socials {
   width: 20%;
   max-width: 12rem;
@@ -113,15 +119,18 @@ Config
   font-size: 1.2rem;
 }
 
+/* Project-card btns */
 .project-card #btn-container a {
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
 }
 
+/* Project-card && Education-card */
 .project-card, .education-card {
   box-shadow: 0 3px 10px rgba(0, 0, 0, 0.3);
   transition: box-shadow 0.15s ease;
 }
 
+/* Project-Card */
 .project-card:hover {
   box-shadow: 0 5px 20px rgba(0, 0, 0, 0.6);
 }
@@ -130,6 +139,7 @@ Config
   .navbar-content, .about-content, .skills-content, .projects-content, .education-content, .contact-content {
     max-width: 50rem;
   }
+  /* About-page content slightly smaller from 768px to 992px */
   .about .about-content article {
     max-width: 45rem;
   }
@@ -164,6 +174,10 @@ body {
   overflow-x: hidden;
 }
 
+.pages {
+  overflow: hidden;
+}
+
 a {
   text-decoration: none;
   color: inherit;
@@ -178,12 +192,9 @@ li {
   list-style-type: none;
 }
 
-img {
-  width: 150px;
-  height: 150px;
-  object-fit: cover;
-}
-
+/***************************************
+Navbar, nav-dropdown, nav-buttons, scrollToTop 
+****************************************/
 .nav-container {
   width: 100%;
 }
@@ -331,6 +342,32 @@ img {
   }
 }
 
+/* Navbar dropdown panel animation */
+@keyframes show-navbar-collapse {
+  0% {
+    opacity: 0;
+    transform: scale(0.95);
+    transform-origin: 100% 0;
+  }
+  100% {
+    opacity: 1;
+    transform: scale(1);
+  }
+}
+
+@keyframes hide-navbar-collapse {
+  from {
+    opacity: 1;
+    transform: scale(1);
+    transform-origin: 100% 0;
+  }
+  to {
+    opacity: 0;
+    transform: scale(0.95);
+  }
+}
+
+/* Scroll to top button */
 #scrollTop {
   background-color: red;
   position: absolute;
@@ -340,6 +377,9 @@ img {
   height: 100px;
 }
 
+/***************************************
+Hero Page
+****************************************/
 /* About Page (Hero) */
 .about {
   position: relative;
@@ -393,6 +433,7 @@ img {
   object-fit: contain;
 }
 
+/* background gradient + "bubbles" for about-section */
 #hero-bg {
   position: absolute;
   z-index: -1;
@@ -426,7 +467,7 @@ img {
 #hero-bg span:nth-child(3) {
   background-color: rgba(255, 255, 255, 0.3);
   top: 380px;
-  right: 7%;
+  right: 23%;
 }
 
 #hero-bg span:nth-child(4) {
@@ -460,13 +501,13 @@ img {
 #hero-bg span:nth-child(8) {
   background-color: rgba(255, 255, 255, 0.2);
   bottom: 70px;
-  right: 20%;
+  right: 30%;
 }
 
 #hero-bg span:nth-child(9) {
   background-color: rgba(255, 255, 255, 0.1);
   bottom: 1%;
-  right: 20%;
+  right: 30%;
 }
 
 @media (min-width: 992px) {
@@ -485,6 +526,9 @@ img {
   }
 }
 
+/***************************************
+Skills-Section
+****************************************/
 .skills {
   margin: 10rem auto 0 auto;
 }
@@ -590,6 +634,9 @@ img {
   }
 }
 
+/***************************************
+Projects-section
+****************************************/
 .projects {
   position: relative;
   padding: 8rem 0 0 0;
@@ -751,6 +798,7 @@ img {
   font-size: 1rem;
 }
 
+/* Projects-section background gradient */
 #projects-bg {
   position: absolute;
   top: 0;
@@ -812,6 +860,9 @@ img {
   }
 }
 
+/***************************************
+Education-section
+****************************************/
 .education {
   margin: 10rem auto;
 }
@@ -826,6 +877,7 @@ img {
   justify-content: center;
 }
 
+/* Each card */
 .education-card {
   margin: 2rem 1rem;
   max-width: 30rem;
@@ -889,6 +941,9 @@ img {
   }
 }
 
+/***************************************
+Contact-footer-section
+****************************************/
 .contact {
   background: linear-gradient(35deg, #11cdef, #1171ef);
 }
@@ -966,32 +1021,4 @@ img {
   .contact-content .contact-info {
     width: 60%;
   }
-}
-
-@keyframes show-navbar-collapse {
-  0% {
-    opacity: 0;
-    transform: scale(0.95);
-    transform-origin: 100% 0;
-  }
-  100% {
-    opacity: 1;
-    transform: scale(1);
-  }
-}
-
-@keyframes hide-navbar-collapse {
-  from {
-    opacity: 1;
-    transform: scale(1);
-    transform-origin: 100% 0;
-  }
-  to {
-    opacity: 0;
-    transform: scale(0.95);
-  }
-}
-
-.pages {
-  overflow: hidden;
 }
