--- a/src/styles/scss/_config.scss
+++ b/src/styles/scss/_config.scss
@@ -6,11 +6,19 @@ Config
 $ff-primary: sans-serif;
 $ff-signature: "Waterfall", cursive;
 
+@mixin flex-center {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+/* Every section's content */
 %container-max-width {
   width: 92%;
   max-width: 35rem;
   margin: 0 auto;
 }
+/* Projects & Education Header Title (Icon + h2) */
 %section-header {
   header {
     width: 80%;
@@ -36,6 +44,7 @@ $ff-signature: "Waterfall", cursive;
   }
 }
 
+/* About-page Resume Btn */
 %hero-resume-btn {
   display: flex;
   background-color: #fff;
@@ -56,6 +65,7 @@ $ff-signature: "Waterfall", cursive;
   }
 }
 
+/* About-page & Footer socials */
 %socials-colored {
   display: flex;
   width: 12rem;
@@ -85,11 +95,14 @@ $ff-signature: "Waterfall", cursive;
     &:nth-child(3) {
       background-color: #e4405f;
     }
+    /* Footer ONLY */
     &:nth-child(4) {
       background-color: rgb(168, 78, 168);
     }
   }
 }
+
+/* 992px + | navbar socials  */
 %socials-navbar {
   width: 20%;
   max-width: 12rem;
@@ -105,27 +118,25 @@ $ff-signature: "Waterfall", cursive;
     }
   }
 }
-
+/* Project-card btns */
 %button-shadow {
   box-shadow: 0 4px 10px rgba($color: #000000, $alpha: 0.2);
 }
+/* Project-card && Education-card */
 %card-shadow {
   box-shadow: 0 3px 10px rgba($color: #000000, $alpha: 0.3);
   transition: box-shadow 0.15s ease;
 }
+/* Project-Card */
 %card-shadow-hover {
   box-shadow: 0 5px 20px rgba($color: #000000, $alpha: 0.6);
-}
-@mixin flex-center {
-  display: flex;
-  align-items: center;
-  justify-content: center;
 }
 
 @media (min-width: 768px) {
   %container-max-width {
     max-width: 50rem;
   }
+  /* About-page content slightly smaller from 768px to 992px */
   .about .about-content article {
     max-width: 45rem;
   }
