--- a/src/styles/scss/main.scss
+++ b/src/styles/scss/main.scss
@@ -9,7 +9,6 @@ Main CSS (General tags)
   padding: 0;
 }
 
-//Containers
 body {
   width: 100%;
   height: 100%;
@@ -18,21 +17,9 @@ body {
   overflow-x: hidden;
 }
 
-// h1 {
-//   font-size: 2.4rem;
-// }
-// h2 {
-//   font-size: 2.2rem;
-// }
-// h3 {
-//   font-size: 2rem;
-// }
-// h4 {
-//   font-size: 1.8rem;
-// }
-// h5 {
-//   font-size: 1.6rem;
-// }
+.pages {
+  overflow: hidden;
+}
 
 //Remove default <a> styles
 a {
@@ -48,43 +35,32 @@ li {
   list-style-type: none;
 }
 
-img {
-  width: 150px;
-  height: 150px;
-  object-fit: cover;
-}
-
+/***************************************
+Navbar, nav-dropdown, nav-buttons, scrollToTop 
+****************************************/
 @import "./containers/navigation/navigation";
+
+/***************************************
+Hero Page
+****************************************/
 @import "./containers/about/about";
+
+/***************************************
+Skills-Section
+****************************************/
 @import "./containers/skills/skills";
+
+/***************************************
+Projects-section
+****************************************/
 @import "./containers/projects/projects";
+
+/***************************************
+Education-section
+****************************************/
 @import "./containers/education/education";
+
+/***************************************
+Contact-footer-section
+****************************************/
 @import "./containers/contact/contact";
-
-@keyframes show-navbar-collapse {
-  0% {
-    opacity: 0;
-    transform: scale(0.95);
-    transform-origin: 100% 0;
-  }
-  100% {
-    opacity: 1;
-    transform: scale(1);
-  }
-}
-
-@keyframes hide-navbar-collapse {
-  from {
-    opacity: 1;
-    transform: scale(1);
-    transform-origin: 100% 0;
-  }
-  to {
-    opacity: 0;
-    transform: scale(0.95);
-  }
-}
-
-.pages {
-  overflow: hidden;
-}
