--- a/src/styles/css/main.css
+++ b/src/styles/css/main.css
@@ -957,17 +957,14 @@ Contact-footer-section
 }
 
 .contact-content figure {
-  width: 10rem;
-  height: 12rem;
-  border-radius: 50%;
-  overflow: hidden;
-  background-color: #0465e4;
+  width: 159px;
+  height: 212.375px;
+  box-shadow: 3px 3px 15px  #1e1e1e;
   margin-bottom: 1rem;
 }
 
 .contact-content figure img {
   width: 100%;
-  height: 100%;
   object-fit: cover;
 }
 
