--- a/src/styles/scss/containers/about/_about.scss
+++ b/src/styles/scss/containers/about/_about.scss
@@ -13,10 +13,13 @@
         font-size: 2rem;
       }
       p {
-        line-height: 1.75;
+        line-height: 1.5;
         font-size: 1.25rem;
-        padding: 1.75rem 0 3rem 0;
+        padding: 0.7rem 0 1rem 0;
         width: 100%;
+      }
+      p:last-of-type{
+        padding-bottom: 3rem;
       }
       .socials {
         #colored-socials {
